# antlr4-calculator

./: .gitignore  CMakeLists.txt  CalcLexer.g4  CalcParser.g4  README.md  build_and_run_sample.bat  gen_build_run.bat  generate.bat  run_sample.bat
parser/: CalcLexer.cpp  CalcLexer.h  CalcLexer.tokens  CalcParser.cpp  CalcParser.h  CalcParserBaseListener.cpp  CalcParserBaseListener.h  CalcParserListener.cpp  CalcParserListener.h
runtime/: CMakeLists.txt
sample_cli/src/: main.cpp
